--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,19 @@ body {
       sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    font-family: 'Dosis',
+        sans-serif;
+      font-family: 'Noto Sans',
+        sans-serif;
+      font-family: 'Teko',
+        sans-serif;
+      font-family: 'Bungee Inline', cursive;
 }
 
 /* TIPOGRAFIA FONT AWESOME */
@@ -25,4 +33,7 @@ sans-serif;
 font-family: 'Teko',
 sans-serif; 
 */
+
+
+
 
